--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="d-flex flex-column justify-content-center align-items-center text-center">
+    <i class="fas fa-brain fa-4x mb-3 text-danger"></i>
+    <h1 class="mb-3" style="font-family: 'Architects Daughter', cursive;">Welcome to Brainicos</h1>
+    <p class="mb-4 text-muted" style="max-width: 500px;">
+        An app to help you manage and admire the smartest minds in your team
+    </p>
+    <a routerLink="/users" class="btn btn-lg btn-primary">
+        Go to smart guys list
+    </a>
+</div>
