--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+}
+
+.navbar-brand {
+    font-family: 'Architects Daughter', cursive;
+}
