--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #44001A;">
-   <div class="container-fluid">
+   <div class="container">
     <a class="navbar-brand d-flex align-items-center" routerLink="/">
         <img src="assets/logo.png" alt="Logo Brainicos" style="height: 32px" class="me-2" />
         <span style="font-family: 'Architects Daughter', cursive;">Brainicos</span>
