--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -1,1 +1,36 @@
-<p>user-form works!</p>
+<div class="modal fade show d-block animate__animated animate__fadeInDown" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"> Add new brainiac</h5>
+                <button type="button" class="btn-close" aria-label="Close" (click)="onClose()"></button>
+            </div>
+
+            <div class="modal-body">
+                <form #userForm="ngForm">
+                    <div class="row mb-3">
+                        <div class="col">
+                            <label class="form-label">First name <span class="text-danger">*</span></label>
+                            <input [(ngModel)]="firstName" name="firstName" required type="text" class="form-control" placeholder="Type in the first name">
+                        </div>
+                        <div class="col">
+                            <label class="form-label"> Last name <span class="text-danger">*</span></label>
+                            <input [(ngModel)]="lastName" name="lastName" required type="text" class="form-control" placeholder="Type in the last name">
+                        </div>
+                        <div class="mb-3">
+                            <label class="form-label">E-mail <span class="text-danger">*</span></label>
+                            <input [(ngModel)]="email" name="email" required type="email" class="form-control" placeholder="Type in the email">
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+
+            <div class="modal-footer">
+                <button class="btn btn-secondary" style="background-color: #B15B5B" (click)="onClose()">Close</button>
+                <button class="btn text-white" style="background-color: #44001A;" (click)="onSave()">Save</button>
+            </div>
+
+        </div>
+    </div>
+</div>
