--- a/frontend/src/app/user-table/components/user-row/user-row.component.html
+++ b/frontend/src/app/user-table/components/user-row/user-row.component.html
@@ -1,1 +1,21 @@
-<p>user-row works!</p>
+<td class="align-middle d-flex align-items-center gap-4">
+  
+  <span>{{ index }}</span>
+  <img [src]="user.avatar" class="rounded-square" width="40" height="40" />
+</td>
+
+
+<td class="align-middle">{{ user.first_name }}</td>
+<td class="align-middle">{{ user.last_name }}</td>
+<td class="align-middle">{{ user.email }}</td>
+
+<td class="align-middle">
+  <div class="d-flex gap-1"> 
+    <button class="btn btn-sm border-0 bg-transparent text-bordo me-1" style="color: #44001A;" (click)="edit.emit(user)">
+      <i class="fas fa-pen-to-square"></i>
+    </button>
+    <button class="btn btn-sm border-0 bg-transparent" style="color: #44001A;" (click)="remove.emit(user.id)">
+      <i class="fas fa-trash-can"></i>
+    </button>
+  </div>
+</td>
