--- a/frontend/src/app/user-table/user-table.component.html
+++ b/frontend/src/app/user-table/user-table.component.html
@@ -1,1 +1,27 @@
-<p>user-table works!</p>
+<div class="container px-0 mt-4">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h2>
+            <i class="fa-solid fa-user-group me-2" style="color: #44001A;"></i>
+            List of smart guys
+        </h2>
+        <button class="btn text-white" style="background-color: #44001A;" (click)="onAdd()">
+            <i class="fa-solid fa-user-plus me-1"></i>
+            Add brainiac
+        </button>
+    </div>
+
+    <app-user-list 
+        [users]="users"
+        (edit)="onEdit($event)"
+        (delete)="onDelete($event)">
+    </app-user-list>
+
+    <!-- Modal -->
+    <app-user-form
+        *ngIf="showModal"
+        [user]="selectedUser"
+        (close)="onCloseModal()"
+        (save)="onSaveUser($event)">
+    </app-user-form>
+
+</div>
