--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<!-- Pasek nawigacji – logo i linki do podstron -->
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #44001A;">
    <div class="container">
     <a class="navbar-brand d-flex align-items-center" routerLink="/">
