--- a/frontend/src/app/user-table/components/user-list/user-list.component.scss
+++ b/frontend/src/app/user-table/components/user-list/user-list.component.scss
@@ -1,4 +1,7 @@
-thead {
-    background-color: #B15B5B !important;
-    color: white;
+.table-header th {
+    background-color: #B15B5B;
+    color: #FFFFFF;
+    font-weight: 500;
+    font-size: 1rem;
+    padding: 12px;
 }
