--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,3 @@
-<div class="d-flex flex-column justify-content-center align-items-center text-center">
-    <i class="fas fa-brain fa-4x mb-3"></i>
-    <h1 class="mb-3" style="font-family: 'Architects Daughter', cursive;">Welcome to Brainicos</h1>
-    <p class="mb-4 text-muted" style="max-width: 500px;">
-      An app to help you manage and admire the smartest minds in your team
-    </p>
-  </div>
-  
+<div class="container p-5 text-center">
+  <h2 class="text-black">Home Page</h2>
+</div>
