--- a/frontend/src/app/user-table/components/user-row/user-row.component.html
+++ b/frontend/src/app/user-table/components/user-row/user-row.component.html
@@ -7,8 +7,8 @@
 <td class="align-middle">{{ user.last_name }}</td>
 <td class="align-middle">{{ user.email }}</td>
 
-<td class="align-items-center text-end">
-  <div class="d-inline-flex gap-2">
+<td class="align-middle text-end">
+  <div class="d-inline-flex align-items-center gap-2">
     <button class="btn btn-sm border-0 bg-transparent custom" (click)="edit.emit(user)">
       <i class="fas fa-pen-to-square"></i>
     </button>
