--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -12,8 +12,10 @@
                         <div class="col mb-3">
                             <label class="form-label small">
                                 First name
-                                <span class="text-danger"
-                                    *ngIf="userForm.controls['firstName']?.errors?.['required']">*</span>
+                                @if(userForm.controls['firstName']?.errors?.['required'])
+                                {
+                                    <span class="text-danger">*</span>
+                                }
                             </label>
                             <input [(ngModel)]="firstName" name="firstName" required type="text" class="form-control"
                                 placeholder="Type in the first name">
@@ -21,8 +23,10 @@
                         <div class="col mb-3">
                             <label class="form-label small">
                                 Last name
-                                <span class="text-danger"
-                                    *ngIf="userForm.controls['lastName']?.errors?.['required']">*</span>
+                                @if(userForm.controls['lastName']?.errors?.['required'])
+                                {
+                                    <span class="text-danger">*</span>
+                                }
                             </label>
                             <input [(ngModel)]="lastName" name="lastName" required type="text" class="form-control"
                                 placeholder="Type in the last name">
@@ -30,8 +34,10 @@
                         <div class="mb-4">
                             <label class="form-label small">
                                 E-mail
-                                <span class="text-danger"
-                                    *ngIf="userForm.controls['email']?.errors?.['required']">*</span>
+                                @if(userForm.controls['email']?.errors?.['required'])
+                                {
+                                    <span class="text-danger">*</span>
+                                }
                             </label>
                             <input [(ngModel)]="email" name="email" required type="email" class="form-control"
                                 placeholder="Type in the email">
@@ -45,7 +51,6 @@
                 <button class="btn btn-secondary" style="background-color: #B15B5B" (click)="onClose()">Close</button>
                 <button class="btn text-white" style="background-color: #44001A;" (click)="onSave()">Save</button>
             </div>
-
         </div>
     </div>
 </div>
