--- a/frontend/src/app/user-table/components/user-list/user-list.component.html
+++ b/frontend/src/app/user-table/components/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover align-middle">
   <thead>
     <tr class="table-header">
-      <th scope="col" style="width: 90px;">Id</th>
+      <th scope="col" style="width: 90px">Id</th>
       <th scope="col">First name</th>
       <th scope="col">Last name</th>
       <th scope="col">E-mail</th>
@@ -10,8 +10,14 @@
   </thead>
 
   <tbody>
-    <tr *ngFor="let user of users; index as i" app-user-row [user]="user" [index]="i + 1" (edit)="onEdit(user)"
+  @for (user of users; track user.id; let i = $index) {
+    <tr
+      app-user-row
+      [user]="user"
+      [index]="i + 1"
+      (edit)="onEdit(user)"
       (remove)="onDelete(user.id)">
     </tr>
-  </tbody>
+  }
+</tbody>
 </table>
