--- a/frontend/src/app/user-table/user-table.component.html
+++ b/frontend/src/app/user-table/user-table.component.html
@@ -13,6 +13,9 @@
     <app-user-list [users]="users" (edit)="onEdit($event)" (delete)="onDelete($event)">
     </app-user-list>
 
-    <app-user-form *ngIf="showModal" [user]="selectedUser" (close)="onCloseModal()" (save)="onSaveUser($event)">
-    </app-user-form>
+    @if(showModal)
+    {
+        <app-user-form [user]="selectedUser" (close)="onCloseModal()" (save)="onSaveUser($event)">
+        </app-user-form>
+    }
 </div>
