--- a/frontend/src/app/user-form/user-form.component.html
+++ b/frontend/src/app/user-form/user-form.component.html
@@ -46,10 +46,9 @@
                 </form>
             </div>
 
-
             <div class="modal-footer">
-                <button class="btn btn-secondary" style="background-color: #B15B5B" (click)="onClose()">Close</button>
-                <button class="btn text-white" style="background-color: #44001A;" (click)="onSave()">Save</button>
+                <button class="btn custom-close" (click)="onClose()">Close</button>
+                <button class="btn text-white custom-save" (click)="onSave()">Save</button>
             </div>
         </div>
     </div>
