--- a/frontend/src/app/user-table/components/user-list/user-list.component.scss
+++ b/frontend/src/app/user-table/components/user-list/user-list.component.scss
@@ -1,7 +1,10 @@
 .table-header th {
-    background-color: #B15B5B;
-    color: #FFFFFF;
-    font-weight: 500;
-    font-size: 1rem;
-    padding: 12px;
+  background-color: #b15b5b;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+.col-id {
+  width: 100px;
 }
