--- a/frontend/src/app/user-table/components/user-row/user-row.component.html
+++ b/frontend/src/app/user-table/components/user-row/user-row.component.html
@@ -1,6 +1,6 @@
 <td class="align-middle d-flex align-items-center gap-4">
   <span>{{ index }}</span>
-  <img [src]="user.avatar" class="rounded-square" width="40" height="40" />
+  <img [src]="user.avatar" class="rounded-square" />
 </td>
 
 <td class="align-middle">{{ user.first_name }}</td>
