--- a/frontend/src/app/user-table/components/user-list/user-list.component.html
+++ b/frontend/src/app/user-table/components/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <table class="table table-striped table-hover align-middle">
   <thead>
     <tr class="table-header">
-      <th scope="col" style="width: 90px">Id</th>
+      <th scope="col" class="col-id">Id</th>
       <th scope="col">First name</th>
       <th scope="col">Last name</th>
       <th scope="col">E-mail</th>
