Dodanie nowego modala do usuwania userow

--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -1,5 +1,8 @@
 img {
     height: 32px;
     width: auto;
-    filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+}
+
+.navbar-brand-name {
+    font-family: 'Architects Daughter', cursive;
 }
