--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #44001A;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" routerLink="/">
-            <img src="assets/logo.png" alt="Logo Brainicos" class="me-2" />
-            <span style="font-family: 'Architects Daughter', cursive;">Brainicos</span>
+            <img src="assets/logo.png" alt="Logo Brainicos" class="me-3" />
+            <span class="navbar-brand-name">Brainicos</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -13,7 +13,8 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto text-end">
                 <li class="nav-item">
-                    <a [routerLink]="'/'" routerLinkActive="active" class="nav-link">Home</a>
+                    <a [routerLink]="'/'" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}"
+                        class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
                     <a [routerLink]="'/users'" routerLinkActive="active" class="nav-link">List of smart guys</a>
