--- a/frontend/src/app/user-table/components/user-row/user-row.component.html
+++ b/frontend/src/app/user-table/components/user-row/user-row.component.html
@@ -1,5 +1,5 @@
 <td class="align-middle d-flex align-items-center gap-4">
-  <span>{{ index }}</span>
+  <span>{{ user.id }}</span>
   <img [src]="user.avatar" class="rounded-square" />
 </td>
 
