--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" routerLink="/">
             <img src="assets/logo.png" alt="Logo Brainicos" class="me-3" />
-            <span class="navbar-brand-name">Brainicos</span>
+            <span class="navbar-brand-name">Brainiacs</span>
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
