--- a/frontend/src/app/user-table/components/user-list/user-list.component.html
+++ b/frontend/src/app/user-table/components/user-list/user-list.component.html
@@ -11,7 +11,7 @@
 
   <tbody>
     @for (user of users; track user.id; let i = $index) {
-    <tr app-user-row [user]="user" [index]="i + 1" (edit)="onEdit(user)" (remove)="onDelete(user.id)">
+    <tr app-user-row [user]="user" (edit)="onEdit(user)" (remove)="onDelete(user.id)">
     </tr>
     }
   </tbody>
